--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,38 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.1.7'
 //    implementation 'com.rengwuxian.materialedttext:library:2.1.4'
     implementation 'com.github.javiersantos:MaterialStyledDialogs:2.1'
+
+
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'noman.placesapi:placesAPI:1.1.3'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.6.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
+    implementation 'com.github.chrisbanes:PhotoView:2.1.3'
+
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+
+
+    implementation 'com.google.code.gson:gson:2.7'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.12.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.4.2'
+
+    implementation 'com.squareup.okhttp3:okhttp:3.12.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.4.2'
+
+
+    implementation 'com.github.jetradarmobile:android-snowfall:1.2.0'
+    implementation 'com.airbnb.android:lottie:3.0.7'
+
+    implementation 'com.sothree.slidinguppanel:library:3.4.0'
 }
