--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
 
     <application
         android:allowBackup="false"
-        android:icon="@drawable/icon_main"
+        android:icon="@drawable/ic_launcher_foreground"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -44,7 +44,7 @@
         </activity>
 
         <activity
-            android:name=".gallery.image_inlarge"
+            android:name=".gallery.Image_inlarge"
             android:theme="@style/Theme.AppCompat.NoActionBar">
         </activity>
 
